--- a/thesis-template-page.html
+++ b/thesis-template-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Thesis Templates</title>
+    <title>LaTeX Templates</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -822,6 +822,121 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <h1 id="poster">Poster Templates</h1>
+                    <p> Posters help researchers to display the results of their research at academic conferences graphically and clearly.</p>
+                    <div class="row equal">
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+a0poster+land">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="a0poster Landscape Poster" src="https://www.papeeria.com/d/file/e208657965673dd4897ffb5f91236f6a/e208657965673dd4897ffb5f91236f6a.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">a0poster Landscape Poster</h4>
+                                        <div class="description">
+                                                This template features a clean landscape layout with a large header section housing important information about the poster and space for a logo.
+                                                <br>Original source: LaTeX Templates
+                                                <br>Version: 1.0 2013.06.22
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+a0poster+portrait">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="a0poster Portrait Poster" src="https://www.papeeria.com/d/file/e423f33e8b7610bb0d6f38f047488734/e423f33e8b7610bb0d6f38f047488734.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">a0poster Portrait Poster</h4>
+                                        <div class="description">
+                                            This template features a clean portrait layout with a large header section housing important information about the poster and space for a logo. 
+                                            Poster content is neatly divided into two (can be changed) columns which is typical for a poster with a portrait orientation. 
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2013.06.22
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+baposter+land">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="baposter Landscape Poster" src="https://www.papeeria.com/d/file/c641a0903f0fb893f9d096007342d27d/c641a0903f0fb893f9d096007342d27d.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">baposter Landscape Poster</h4>
+                                        <div class="description">
+                                            This template divides content into separate boxes with clear headings in each one. The landscape layout features four columns which can be merged into larger blocks if required.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2013.06.11
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+baposter+portrait">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="baposter Portrait Poster" src="https://www.papeeria.com/d/file/33aff4ddefb4dbea92e8d40e36101493/33aff4ddefb4dbea92e8d40e36101493.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">baposter Portrait Poster</h4>
+                                        <div class="description">
+                                            This template divides content into separate boxes with clear headings in each one. The portrait layout features a small side column for study details and a larger column to show off results obtained from the research.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2013.05.15
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+dreuw">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Dreuw &amp; Deselaer&rsquo;s Poster" src="https://www.papeeria.com/d/file/63f1e3cc64a57e6726101dbf3be7c53b/63f1e3cc64a57e6726101dbf3be7c53b.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Dreuw &amp; Deselaer&rsquo;s Poster</h4>
+                                        <div class="description">
+                                            This template features a dark gray color scheme for content and a contrasting title and footer to highlight important information about the research.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.0 2013.04.11
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="template-item">
+                                <a href="https://www.papeeria.com/templates#type:poster+baposter+portrait">
+                                    <div class="open-template">
+                                        <div class="open-template-text">Open Template</div>
+                                    </div>
+                                    <img class="img-thumbnail" alt="Jacobs Landscape Poster" src="https://www.papeeria.com/d/file/7cf44d5ccb90055a0d974a7615ac0e61/7cf44d5ccb90055a0d974a7615ac0e61.png/undefined">
+                                    <div class="template-text-info">
+                                        <h4 class="caption">Jacobs Landscape Poster</h4>
+                                        <div class="description">
+                                            This template features a clean sectioned look suitable for presenting research at a conference. Important information is highlighted with colored boxes and each section within the poster is clearly separated from the others.
+                                            <br>Original source: LaTeX Templates
+                                            <br>Version: 1.1 2014.05.14
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                 <div>
                     <a class="load-more-item " href="https://www.papeeria.com/templates">
                         More Templates
